--- a/config/kong.yaml
+++ b/config/kong.yaml
@@ -9,6 +9,6 @@ services:
    routes:
    - name: app_1
      hosts:
-     - app_1
+     - laboratorio.pro.br
      protocol: http
      strip_path: true
