--- a/config/kong.yaml
+++ b/config/kong.yaml
@@ -30,5 +30,5 @@ plugins:
       storage: redis
       storage_config:
         redis:
-          host: redis.service
+          host: redis
           port: 6379
