--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,17 +59,17 @@ services:
     environment:
       - LC_CTYPE=en_US.UTF-8
       - LC_ALL=en_US.UTF-8
-      - KONG_DATABASE=off
-      #- KONG_PG_DATABASE=kong
-      #- KONG_PG_HOST=postgres
-      #- KONG_PG_USER=kong_db_user
-      #- KONG_PG_PASSWORD=kong_db_password
-      #- KONG_CASSANDRA_CONTACT_POINTS=postgres
+      #- KONG_DATABASE=off
+      - KONG_PG_DATABASE=kong
+      - KONG_PG_HOST=postgres
+      - KONG_PG_USER=kong_db_user
+      - KONG_PG_PASSWORD=kong_db_password
+      - KONG_CASSANDRA_CONTACT_POINTS=postgres
       - KONG_PROXY_ACCESS_LOG=/dev/stdout
       - KONG_ADMIN_ACCESS_LOG=/dev/stdout
       - KONG_PROXY_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
-      #- KONG_PROXY_LISTEN=0.0.0.0:8002
+      - KONG_PROXY_LISTEN=0.0.0.0:80
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
       - KONG_DECLARATIVE_CONFIG=/opt/kong/kong.yaml
     healthcheck:
@@ -79,7 +79,7 @@ services:
       retries: 15
     restart: on-failure
     ports:
-      - 8000:8000
+      - 80:80
       - 8443:8443
       - 8001:8001
       - 8444:8444
