--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,12 +59,12 @@ services:
     environment:
       - LC_CTYPE=en_US.UTF-8
       - LC_ALL=en_US.UTF-8
-      - KONG_DATABASE=off
+      #- KONG_DATABASE=off
       #- lua_ssl_trusted_certificate
-      # - KONG_PG_DATABASE=kong
-      # - KONG_PG_HOST=postgres
-      # - KONG_PG_USER=kong_db_user
-      # - KONG_PG_PASSWORD=kong_db_password
+      - KONG_PG_DATABASE=kong
+      - KONG_PG_HOST=postgres
+      - KONG_PG_USER=kong_db_user
+      - KONG_PG_PASSWORD=kong_db_password
       - KONG_CASSANDRA_CONTACT_POINTS=postgres
       - KONG_PROXY_ACCESS_LOG=/dev/stdout
       - KONG_ADMIN_ACCESS_LOG=/dev/stdout
