--- a/config/kong.yaml
+++ b/config/kong.yaml
@@ -26,7 +26,7 @@ plugins:
     config:
       account_email: luizedfigueira@gmail.com
       domains:
-        - "laboratorio.pro.br"
+        - laboratorio.pro.br
       tos_accepted: true
       storage: redis
       storage_config:
