--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,6 @@ services:
       - LC_CTYPE=en_US.UTF-8
       - LC_ALL=en_US.UTF-8
       #- KONG_DATABASE=off
-      #- lua_ssl_trusted_certificate
       - KONG_PG_DATABASE=kong
       - KONG_PG_HOST=postgres
       - KONG_PG_USER=kong_db_user
@@ -70,9 +69,10 @@ services:
       - KONG_ADMIN_ACCESS_LOG=/dev/stdout
       - KONG_PROXY_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
-      - KONG_PROXY_LISTEN=0.0.0.0:80
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
-      - KONG_DECLARATIVE_CONFIG=/opt/kong/kong.yaml
+      - KONG_PROXY_LISTEN=0.0.0.0:80, 0.0.0.0:8443 http2 ssl
+      - KONG_LUA_SSL_TRUSTED_CERTIFICATE=system
+      #- KONG_DECLARATIVE_CONFIG=/opt/kong/kong.yaml
     healthcheck:
       test: ["CMD", "curl", "-f", "http://kong:8001"]
       interval: 5s
