--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       - KONG_PROXY_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
-      - KONG_PROXY_LISTEN=0.0.0.0:8000, 0.0.0.0:8443 http2 ssl
+      - KONG_PROXY_LISTEN=0.0.0.0:8443 http2 ssl
       - KONG_LUA_SSL_TRUSTED_CERTIFICATE=system
       #- KONG_DECLARATIVE_CONFIG=/opt/kong/kong.yaml
     healthcheck:
@@ -80,8 +80,8 @@ services:
       retries: 15
     restart: on-failure
     ports:
-      - 8000:8000
-      - 8443:8443
+      - 80:80
+      - 443:8443
       - 8001:8001
       - 8444:8444
     networks:
